Rename MemorySession -> SegmentScope Improve javadoc of SegmentScope/Arena Address review comments