@@ -28,23 +28,29 @@ package java.lang.foreign;
 import jdk.internal.foreign.MemorySessionImpl;
 import jdk.internal.javac.PreviewFeature;
 
-import java.util.Objects;
-
 /**
- * An arena allocates and manages the lifecycle of native segments.
+ * An arena controls the lifecycle of one or more memory segments, providing both flexible allocation and timely deallocation.
  * <p>
- * An arena is a {@linkplain AutoCloseable closeable} segment allocator that has a bounded {@linkplain MemorySession memory session}.
- * The arena's session starts when the arena is created, and ends when the arena is {@linkplain #close() closed}.
- * All native segments {@linkplain #allocate(long, long) allocated} by the arena are associated with its session, and
- * cannot be accessed after the arena is closed.
- * <p>
- * An arena is extremely useful when interacting with foreign code, as shown below:
+ * An arena has a {@linkplain #scope() scope}, called the arena scope. When the arena is {@linkplain #close() closed},
+ * the arena scope becomes not {@linkplain SegmentScope#isAlive() alive}. As a result, all the
+ * segments associated with the arena scope are invalidated, safely and atomically, their backing memory regions are
+ * deallocated (where applicable) and can no longer be accessed after the arena is closed:
+ *
+ * {@snippet lang = java:
+ * try (Arena arena = Arena.openConfined()) {
+ *     MemorySegment segment = MemorySegment.allocateNative(100, arena.scope());
+ *     ...
+ * } // memory released here
+ *}
+ *
+ * Furthermore, an arena is a {@link SegmentAllocator}. All the segments {@linkplain #allocate(long, long) allocated} by the
+ * arena are associated with the arena scope. This makes arenas extremely useful when interacting with foreign code, as shown below:
  *
  * {@snippet lang = java:
  * try (Arena arena = Arena.openConfined()) {
  *     MemorySegment nativeArray = arena.allocateArray(ValueLayout.JAVA_INT, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
  *     MemorySegment nativeString = arena.allocateUtf8String("Hello!");
- *     MemorySegment upcallStub = linker.upcallStub(handle, desc, arena.session());
+ *     MemorySegment upcallStub = linker.upcallStub(handle, desc, arena.scope());
  *     ...
  * } // memory released here
  *}
@@ -52,26 +58,25 @@ import java.util.Objects;
  * <h2 id = "thread-confinement">Safety and thread-confinement</h2>
  *
  * Arenas provide strong temporal safety guarantees: a memory segment allocated by an arena cannot be accessed
- * <em>after</em> the arena has been closed. The costs associated with maintaining this safety invariant can vary greatly,
- * depending on how many threads have access to the memory segments allocated by the arena. For instance, if an arena
- * is created and closed by one thread, and the segments associated with it are only ever accessed by that very same thread,
- * then ensuring correctness is simple.
+ * <em>after</em> the arena has been closed. The cost of providing this guarantee varies based on the
+ * number of threads that have access to the memory segments allocated by the arena. For instance, if an arena
+ * is always created and closed by one thread, and the memory segments associated with the arena's scope are always
+ * accessed by that same thread, then ensuring correctness is trivial.
  * <p>
  * Conversely, if an arena allocates segments that can be accessed by multiple threads, or if the arena can be closed
- * by a thread other than the accessing thread, the situation is much more complex. For instance, a segment might be accessed
- * <em>while</em> the associated arena is being closed, concurrently, by another thread. Even in this extreme case,
- * arenas must provide strong temporal safety guarantees, but doing so can incur in a higher performance impact.
- * For this reason, arenas can be divided into two categories: <em>thread-confined</em> arenas,
- * and <em>shared</em> arenas.
+ * by a thread other than the accessing thread, then ensuring correctness is much more complex. For example, a segment
+ * allocated with the arena might be accessed <em>while</em> another thread attempts, concurrently, to close the arena.
+ * To provide the strong temporal safety guarantee without forcing every client, even simple ones, to incur a performance
+ * impact, arenas are divided into <em>thread-confined</em> arenas, and <em>shared</em> arenas.
  * <p>
  * Confined arenas, support strong thread-confinement guarantees. Upon creation, they are assigned an
  * {@linkplain #isCloseableBy(Thread) owner thread}, typically the thread which initiated the creation operation.
- * The segments created by a confined arena can only be {@linkplain MemorySession#isAccessibleBy(Thread) accessed}
- * by the thread that created the arena. Moreover, any attempt to close the confined arena from a thread other than the owner thread will
+ * The segments created by a confined arena can only be {@linkplain SegmentScope#isAccessibleBy(Thread) accessed}
+ * by the owner thread. Moreover, any attempt to close the confined arena from a thread other than the owner thread will
  * fail with {@link WrongThreadException}.
  * <p>
- * Shared memory sessions, on the other hand, have no owner thread. The segments created by a shared arena
- * can be {@linkplain MemorySession#isAccessibleBy(Thread) accessed} by multiple threads. This might be useful when
+ * Shared arenas, on the other hand, have no owner thread. The segments created by a shared arena
+ * can be {@linkplain SegmentScope#isAccessibleBy(Thread) accessed} by multiple threads. This might be useful when
  * multiple threads need to access the same memory segment concurrently (e.g. in the case of parallel processing).
  * Moreover, a shared arena {@linkplain #isCloseableBy(Thread) can be closed} by any thread.
  *
@@ -81,44 +86,46 @@ import java.util.Objects;
 public interface Arena extends SegmentAllocator, AutoCloseable {
 
     /**
-     * Creates a native memory segment with the given size (in bytes) and alignment constraint (in bytes).
-     * The returned segment is associated with the arena's memory session.
+     * Returns a native memory segment with the given size (in bytes) and alignment constraint (in bytes).
+     * The returned segment is associated with the arena scope.
      * The segment's {@link MemorySegment#address() address} is the starting address of the
      * allocated off-heap memory region backing the segment, and the address is 
      * aligned according the provided alignment constraint.
      *
      * @implSpec
      * The default implementation of this method is equivalent to the following code:
-     * {@snippet lang=java :
-     * MemorySegment.allocateNative(bytesSize, byteAlignment, session());
-     * }
+     * {@snippet lang = java:
+     * MemorySegment.allocateNative(bytesSize, byteAlignment, scope());
+     *}
+     * More generally implementations of this method must return a native method featuring the requested size,
+     * and that is compatible with the provided alignment constraint.
      *
      * @param byteSize the size (in bytes) of the off-heap memory block backing the native memory segment.
      * @param byteAlignment the alignment constraint (in bytes) of the off-heap region of memory backing the native memory segment.
      * @return a new native memory segment.
      * @throws IllegalArgumentException if {@code bytesSize < 0}, {@code alignmentBytes <= 0}, or if {@code alignmentBytes}
      * is not a power of 2.
-     * @throws IllegalStateException if the session associated with this arena is not {@linkplain MemorySession#isAlive() alive}.
+     * @throws IllegalStateException if the arena has already been {@linkplain #close() closed}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
-     * such that {@code session.isAccessibleBy(T) == false}.
-     * @see MemorySegment#allocateNative(long, long, MemorySession)
+     * such that {@code scope().isAccessibleBy(T) == false}.
+     * @see MemorySegment#allocateNative(long, long, SegmentScope)
      */
     @Override
     default MemorySegment allocate(long byteSize, long byteAlignment) {
-        return MemorySegment.allocateNative(byteSize, byteAlignment, session());
+        return MemorySegment.allocateNative(byteSize, byteAlignment, scope());
     }
 
     /**
-     * {@return the session associated with this arena}
+     * {@return the arena scope}
      */
-    MemorySession session();
+    SegmentScope scope();
 
     /**
-     * Closes this arena. If this method completes normally, the arena session becomes not {@linkplain MemorySession#isAlive() alive},
+     * Closes this arena. If this method completes normally, the arena scope becomes not {@linkplain SegmentScope#isAlive() alive},
      * and all the memory segments associated with it can no longer be accessed. Furthermore, any off-heap region of memory backing the
-     * segments associated with that memory session are also released.
-     * @throws IllegalStateException if the session associated with this arena is not {@linkplain MemorySession#isAlive() alive}.
-     * @throws IllegalStateException if this session is {@linkplain MemorySession#whileAlive(Runnable) kept alive} by another client.
+     * segments associated with that scope are also released.
+     * @throws IllegalStateException if the arena has already been {@linkplain #close() closed}.
+     * @throws IllegalStateException if the arena scope is {@linkplain SegmentScope#whileAlive(Runnable) kept alive}.
      * @throws WrongThreadException if this method is called from a thread {@code T},
      * such that {@code isCloseableBy(T) == false}.
      */
@@ -132,39 +139,16 @@ public interface Arena extends SegmentAllocator, AutoCloseable {
     boolean isCloseableBy(Thread thread);
 
     /**
-     * Creates a new confined arena.
-     * @return a new confined arena.
+     * {@return a new confined arena}
      */
     static Arena openConfined() {
-        return makeArena(MemorySessionImpl.createConfined(Thread.currentThread()));
+        return MemorySessionImpl.createConfined(Thread.currentThread()).asArena();
     }
 
     /**
-     * Creates a new shared arena.
-     * @return a new shared arena.
+     * {@return a new shared arena}
      */
     static Arena openShared() {
-        return makeArena(MemorySessionImpl.createShared());
-    }
-
-    private static Arena makeArena(MemorySessionImpl sessionImpl) {
-        return new Arena() {
-            @Override
-            public MemorySession session() {
-                return sessionImpl;
-            }
-
-            @Override
-            public void close() {
-                sessionImpl.close();
-            }
-
-            @Override
-            public boolean isCloseableBy(Thread thread) {
-                Objects.requireNonNull(thread);
-                return sessionImpl.ownerThread() == null || // shared
-                        sessionImpl.ownerThread() == thread;
-            }
-        };
+        return MemorySessionImpl.createShared().asArena();
     }
 }
